fix: set Node.js 20.x for Vercel deployment

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "eduzsantillan-dev",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "20.x"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
